package domain;

public interface TipoAnfibio {
	
	//Metodos
	public abstract Integer cantidadRuedas();
	public abstract Integer velocidadTierra();
	
}
